--- a/template.yaml
+++ b/template.yaml
@@ -39,7 +39,7 @@ Resources:
     Properties:
       CodeUri: s3UploaderFunction/
       Handler: app.handler
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       MemorySize: 128
       Environment:
         Variables:
